switch to NOVOPlasty

--- a/nextflow.config
+++ b/nextflow.config
@@ -11,6 +11,14 @@ params {
   min_blast_wordsize      = 11
   max_blast_wordsize      = 25
 
+  //novoplasty
+  min_size                = 12000
+  max_size                = 22000
+  kmer                    = 33
+  max_memory              = 8
+  read_length             = 151
+  insert_size             = 320
+
   threads                 = 4
 
 }
