update output format

--- a/nextflow.config
+++ b/nextflow.config
@@ -4,10 +4,12 @@ params {
   mitogenome                   = null
   reads                        = null
 
-
-  output                  = "mitogenome_retriever_out"
+  //optional
+  output                  = "mitogenome_extraction_out"
   dbName                  = "blast_database"
   threads                 = 4
+
+  //mitogenome extraction
   min_blast_wordsize      = 11
   max_blast_wordsize      = 25
 
@@ -15,10 +17,8 @@ params {
   min_size                = 12000
   max_size                = 22000
   kmer                    = 33
-  max_memory              = 8
+  max_memory              = 6
   read_length             = 151
   insert_size             = 320
-
-  threads                 = 4
 
 }
