adding -profile conda option

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,24 +1,61 @@
 params {
-  // Mandatory option
-  contigs                      = null
-  mitogenome                   = null
-  reads                        = null
+  // Mandatory options
+  contigs                 = null
+  mitogenome              = null
+  reads                   = null
 
-  //optional
-  output                  = "mitogenome_extraction_out"
-  dbName                  = "blast_database"
-  threads                 = 4
+  // Non-mandatory options
+  output                  = "test"
+  species_id              = null
 
-  //mitogenome extraction
+  // Mitogenome extraction
   min_blast_wordsize      = 11
   max_blast_wordsize      = 25
+  nucleotide_size         = 16500
 
-  //novoplasty
+  // NOVOPlasty settings
   min_size                = 12000
   max_size                = 22000
-  kmer                    = 33
+  kmer_size               = 33
   max_memory              = 6
   read_length             = 151
   insert_size             = 320
 
+  // Resource allocation (default values only, expected to be overwritten)
+  max_retries           = 3
+  max_cpus              = 4
+  // Memory allocation guide:
+  //   B = bytes, KB = kilobytes, MB = megabytes, GB = gigabytes, and
+  //   TB = terabytes
+  //   Example: 32.GB
+  max_memory            = 10.GB
+
+}
+
+process {
+  withLabel:process_low {
+    //multiply cpu and memory by task attempt (up to 3)
+    cpus           = { 4 * task.attempt < params.max_cpus ?
+                       4 * task.attempt : params.max_cpus }
+    memory         = { 6.GB * task.attempt < params.max_memory ?
+                       6.GB * task.attempt : params.max_memory }
+    errorStrategy  = { 'retry' }
+    maxRetries     = params.max_retries
+  }
+  withLabel:process_medium {
+    cpus           = { 4 * task.attempt < params.max_cpus ?
+                       4 * task.attempt : params.max_cpus }
+    memory         = { 8.GB * task.attempt < params.max_memory ?
+                       8.GB * task.attempt : params.max_memory }
+    errorStrategy  = { 'retry' }
+    maxRetries     = params.max_retries
+  }
+  withLabel:process_high {
+    cpus           = { 4 * task.attempt < params.max_cpus ?
+                       4 * task.attempt : params.max_cpus }
+    memory         = { 10.GB * task.attempt < params.max_memory ?
+                       10.GB * task.attempt : params.max_memory }
+    errorStrategy  = { 'retry' }
+    maxRetries     = params.max_retries
+  }
 }
