--- a/nextflow.config
+++ b/nextflow.config
@@ -7,6 +7,7 @@ params {
   // Non-mandatory options
   output                  = "test"
   species_id              = null
+  help                    = false
 
   // Mitogenome extraction
   min_blast_wordsize      = 11
@@ -20,6 +21,9 @@ params {
   max_memory              = 6
   read_length             = 151
   insert_size             = 320
+  
+  // MITOS settings
+  mitos_reference         = null
 
   // Resource allocation (default values only, expected to be overwritten)
   max_retries           = 3
@@ -35,10 +39,8 @@ params {
 process {
   withLabel:process_low {
     //multiply cpu and memory by task attempt (up to 3)
-    cpus           = { 4 * task.attempt < params.max_cpus ?
-                       4 * task.attempt : params.max_cpus }
-    memory         = { 6.GB * task.attempt < params.max_memory ?
-                       6.GB * task.attempt : params.max_memory }
+    cpus           = { 4 }
+    memory         = { 6.GB }
     errorStrategy  = { 'retry' }
     maxRetries     = params.max_retries
   }
@@ -58,4 +60,15 @@ process {
     errorStrategy  = { 'retry' }
     maxRetries     = params.max_retries
   }
+}
+
+profiles {
+  withName:reassemble_mitogenome {
+    process.conda        = "$baseDir/environment1.yml"
+    params.enable_conda  = true
+  }
+  withName:annotate_mitogenome {
+    process.conda        = "$baseDir/environment2.yml"
+    params.enable_conda  = true
+  } 
 }
