update conda environment

--- a/environment1.yml
+++ b/environment1.yml
@@ -1,7 +1,12 @@
+# You can use this file to create a conda environment for this pipeline:
+# conda env create -f environment1.yml
+
 name: mitogenome-extraction
 channels:
   - bioconda
+  - conda-forge
+  - defaults
 dependencies:
   - bioconda::seqkit=0.15.0
   - bioconda::blast=2.5.0
-  - bioconda::novoplasty=2.2.2
+  - bioconda::novoplasty=4.3.1
