--- a/environment2.yml
+++ b/environment2.yml
@@ -1,5 +1,6 @@
 # You can use this file to create a conda environment for this pipeline:
-#   conda env create -f environment.yml
+# conda env create -f environment2.yml
+
 name: mitogenome-mitos
 channels:
   - bioconda
