update average insert size

--- a/nextflow.config
+++ b/nextflow.config
@@ -20,7 +20,7 @@ params {
   kmer_size               = 33
   max_memory              = 6
   read_length             = 151
-  insert_size             = 320
+  insert_size             = 300
 
   // MITOS settings
   mitos_reference         = "refseq63m"
@@ -63,7 +63,7 @@ process {
                        4 * task.attempt : params.max_cpus }
     memory         = { 10.GB * task.attempt < params.max_memory ?
                        10.GB * task.attempt : params.max_memory }
-    errorStrategy  = { 'retry' }
-    maxRetries     = params.max_retries
+    errorStrategy  = { 'finish' }
+//    maxRetries     = params.max_retries
   }
 }
