update error strategy

--- a/nextflow.config
+++ b/nextflow.config
@@ -47,8 +47,8 @@ process {
     //multiply cpu and memory by task attempt (up to 3)
     cpus           = { 4 }
     memory         = { 6.GB }
-    errorStrategy  = { 'retry' }
-    maxRetries     = params.max_retries
+    errorStrategy  = { 'finish' }
+    //maxRetries     = params.max_retries
   }
   withLabel:process_medium {
     cpus           = { 4 * task.attempt < params.max_cpus ?
