add option to annotate different mitochondrial genetic code

--- a/nextflow.config
+++ b/nextflow.config
@@ -24,9 +24,7 @@ params {
 
   // MITOS settings
   mitos_reference         = "refseq63m"
-
-  // Species identification
-  identification_db       = "nereididae_barcodes_2021-12-08.fna"
+  genetic_code            = '05'
 
   // Flow control
   skip_identification     = false
