add --coverage_cutoff option

--- a/nextflow.config
+++ b/nextflow.config
@@ -10,6 +10,7 @@ params {
   help                    = false
 
   // Mitogenome extraction
+  coverage_cutoff         = 6
   min_blast_wordsize      = 11
   max_blast_wordsize      = 25
   nucleotide_size         = 16500
