set basis for switch to docker

--- a/nextflow.config
+++ b/nextflow.config
@@ -66,3 +66,57 @@ process {
   //    maxRetries     = params.max_retries
   }
 }
+
+profiles {
+
+    /*
+    
+    List of Dockerimages:
+
+    seqkit:     pegi3s/seqkit:2.1.0
+    blast:      pegi3s/blast:2.10.0
+    novoplasty: cyverse/novoplasty:3.7
+    emboss:     biocontainers/emboss:v6.6.0dfsg-7b1-deb_cv1
+    mitos:      nanozoo/mitos:2.0.8--c87ec9c
+    
+    */
+
+    local {
+        docker.enabled = true
+        process {
+            withName: extract_mitogenome {
+                container = 'blah'
+            }
+            withName: strand_control {
+                container = 'blah'
+            }
+            withName: annotate_mitogenome {
+                container = 'blah'
+            }
+        }
+    }
+
+    slurm_cluster {
+        singularity.enabled = true
+        singularity.cacheDir = 'cache'
+        singularity.autoMounts = true
+
+        executor {
+            name = 'slurm'
+            queueSize = 50
+            submitRateLimit = '10 sec'
+        }
+
+        process {
+            withName: extract_mitogenome {
+                container = 'blah'
+            }
+            withName: strand_control {
+                container = 'blah'
+            }
+            withName: annotate_mitogenome {
+                container = 'blah'
+            }
+        }
+    }
+}
