added additional cluster configs

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,3 +1,23 @@
+env { PYTHONNOUSERSITE = 1 }
+
+// A failed process is retried when encountering one of these exit codes
+final ERROR_CODES = [12,143,137,104,134,139]
+// Use one of these node for memory-intense tasks
+final FAT_PARTITION = 'fat'
+final FAT_PLUS_PARTITION = 'fat+'
+// Use this node for non-memory-intense tasks
+final NORMAL_PARTITION = 'medium'
+// Start using the fat/fat+ partitions when the amount of memory exceeds one
+// of these values
+final FAT_PARTITION_THRESHOLD = 60.GB
+final FAT_PLUS_PARTITION_THRESHOLD = 500.GB
+// Never request more memory than this from a node
+final MAX_NODE_MEMORY = 1.TB
+// Job submissions can never be longer than this
+final MAX_NODE_WALLTIME = 5.d
+// Request `--qos=long` when job submissions are longer than this threshold
+final QOS_LONG_THRESHOLD = 2.d
+
 params {
     // Mandatory options
     contigs                 = null
@@ -38,32 +58,49 @@ params {
     //   TB = terabytes
     //   Example: 32.GB
     max_memory            = 10.GB
+    max_time              = '1.d'  
 
 }
 
 process {
     withLabel:process_low {
-        //multiply cpu and memory by task attempt (up to 3)
-        cpus           = { 4 }
-        memory         = { 6.GB }
-        errorStrategy  = { 'finish' }
-        //maxRetries     = params.max_retries
+        cpus           = { 4 * task.attempt < params.max_cpus ?
+                           4 * task.attempt : params.max_cpus }
+        memory         = { 8.GB * task.attempt < params.max_memory ?
+                           8.GB * task.attempt : params.max_memory }
+        time           = { 3.h * task.attempt < params.max_time ?
+                           3.h * task.attempt : params.max_time }
+        clusterOptions = '--constraint=scratch2'
+        errorStrategy  = { task.exitStatus in ERROR_CODES ? 'retry' : 'finish' }
+        maxRetries     = params.max_retries
     }
     withLabel:process_medium {
         cpus           = { 4 * task.attempt < params.max_cpus ?
                            4 * task.attempt : params.max_cpus }
         memory         = { 8.GB * task.attempt < params.max_memory ?
                            8.GB * task.attempt : params.max_memory }
-        errorStrategy  = { 'retry' }
+        time           = { 6.h * task.attempt < params.max_time ?
+                           6.h * task.attempt : params.max_time }
+        clusterOptions = '--constraint=scratch2'
+        errorStrategy  = { task.exitStatus in ERROR_CODES ? 'retry' : 'finish' }
         maxRetries     = params.max_retries
     }
     withLabel:process_high {
-        cpus           = { 4 * task.attempt < params.max_cpus ?
-                           4 * task.attempt : params.max_cpus }
-        memory         = { 10.GB * task.attempt < params.max_memory ?
-                           10.GB * task.attempt : params.max_memory }
-        errorStrategy  = { 'finish' }
-  //    maxRetries     = params.max_retries
+        cpus           = params.max_cpus
+        // Do not utilize more than 1 TB of memory (most nodes have less)
+        memory         = { params.max_memory * task.attempt < MAX_NODE_MEMORY ?
+                           params.max_memory * task.attempt : MAX_NODE_MEMORY }
+        // Runtime cannot exceed 5 days total
+        time           = { params.max_time < MAX_NODE_WALLTIME ?
+                           params.max_time : MAX_NODE_WALLTIME }
+        // Add the `--qos=long` flag if the job spans more than 48 hours
+        clusterOptions = { params.max_time > QOS_LONG_THRESHOLD ?
+                           '--constraint=scratch2 --qos=long' :
+                           '--constraint=scratch2' }
+        queue = { params.max_memory * task.attempt > FAT_PLUS_PARTITION_THRESHOLD ?
+                  FAT_PLUS_PARTITION : FAT_PARTITION }
+        errorStrategy  = { task.exitStatus in ERROR_CODES ? 'retry' : 'finish' }
+        maxRetries     = params.max_retries
   }
 }
 
