added containers to profiles

--- a/nextflow.config
+++ b/nextflow.config
@@ -122,13 +122,19 @@ profiles {
         docker.enabled = true
         process {
             withName: extract_mitogenome {
-                container = 'blah'
+                container = 'clemensma/symbiontdivider:latest'
+            }
+            withName: reassemble_mitogenome {
+                container = 'cyverse/novoplasty:3.7'
             }
             withName: strand_control {
-                container = 'blah'
+                container = 'pegi3s/blast:2.10.0'
             }
             withName: annotate_mitogenome {
-                container = 'blah'
+                container = 'nanozoo/mitos:2.0.8--c87ec9c'
+            }
+            withName: mitos_formatting {
+                conatiner = 'clemensma/symbiontdivider:latest'
             }
         }
     }
@@ -146,13 +152,19 @@ profiles {
 
         process {
             withName: extract_mitogenome {
-                container = 'blah'
+                container = 'docker://clemensma/symbiontdivider:latest'
+            }
+            withName: reassemble_mitogenome {
+                container = 'docker://cyverse/novoplasty:3.7'
             }
             withName: strand_control {
-                container = 'blah'
+                container = 'docker://pegi3s/blast:2.10.0'
             }
             withName: annotate_mitogenome {
-                container = 'blah'
+                container = 'docker://nanozoo/mitos:2.0.8--c87ec9c'
+            }
+            withName: mitos_formatting {
+                conatiner = 'docker://clemensma/symbiontdivider:latest'
             }
         }
     }
