add option to extract baecode sequence

--- a/nextflow.config
+++ b/nextflow.config
@@ -3,6 +3,7 @@ params {
   contigs                 = null
   mitogenome              = null
   reads                   = null
+  barcode                 = null
 
   // Non-mandatory options
   output                  = "mitogenome-extraction"
@@ -26,6 +27,7 @@ params {
   // MITOS settings
   mitos_reference         = "refseq63m"
   genetic_code            = '05'
+
 
   // Flow control
   skip_identification     = false
