make --barcode optional

--- a/nextflow.config
+++ b/nextflow.config
@@ -3,7 +3,6 @@ params {
   contigs                 = null
   mitogenome              = null
   reads                   = null
-  barcode                 = null
 
   // Non-mandatory options
   output                  = "mitogenome-extraction"
@@ -31,6 +30,7 @@ params {
 
   // Flow control
   skip_identification     = false
+  barcode                 = false
 
   // Resource allocation (default values only, expected to be overwritten)
   max_retries           = 3
@@ -47,7 +47,7 @@ process {
   withLabel:process_low {
     //multiply cpu and memory by task attempt (up to 3)
     cpus           = { 4 }
-    memory         = { 6.GB }
+    memory         = { 10.GB }
     errorStrategy  = { 'finish' }
     //maxRetries     = params.max_retries
   }
