--- a/nextflow.config
+++ b/nextflow.config
@@ -7,13 +7,15 @@ params {
   // Non-mandatory options
   output                  = "mitogenome-extraction"
   species_id              = null
+  assembler               = "spades"
   help                    = false
 
   // Mitogenome extraction
   coverage_cutoff         = 6
   min_blast_wordsize      = 11
   max_blast_wordsize      = 25
-  nucleotide_size         = 16500
+  mito_min_size           = false
+  mito_size               = 16500
 
   // NOVOPlasty settings
   min_size                = 12000
@@ -31,6 +33,7 @@ params {
   // Flow control
   skip_identification     = false
   barcode                 = false
+  testing                 = false
 
   // Resource allocation (default values only, expected to be overwritten)
   max_retries           = 3
