add --high_coverage flag

--- a/nextflow.config
+++ b/nextflow.config
@@ -16,6 +16,7 @@ params {
   max_blast_wordsize      = 25
   mito_min_size           = false
   mito_size               = 16500
+  high_coverage           = false
 
   // NOVOPlasty settings
   min_size                = 12000
